fix navigation list alignment issue with some themes

--- a/source/scss/components/navigation/initial-char-navigation.scss
+++ b/source/scss/components/navigation/initial-char-navigation.scss
@@ -12,6 +12,7 @@
 	ul {
 		display: flex;
 		flex-wrap: wrap;
+		margin: 0;
 	}
 	li {
 		margin: .25rem 0 .25rem -1px;
